--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ body {
 
 body {
   background-color: #7cc6fe;
+  background-image: 
+  url(
+"https://st3.depositphotos.com/9527076/12784/i/950/depositphotos_127842222-stock-photo-fitness-or-bodybuilding-background-old.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,6 +24,7 @@ body {
 
 .app {
   background-color: #252d4a;
+  opacity: 0.7;
   width: 450px;
   min-height: 200px;
   height: min-content;
@@ -31,9 +35,9 @@ body {
   justify-content: space-evenly;
 }
 
-.score-section {
-  display: flex;
-  font-size: 24px;
+.conclusion-section {
+  width: 100%;
+  font-size: 16px;
   align-items: center;
 }
 
